# rms

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-swarm.yml  entrypoint-airflow.sh  pyproject.toml  requerements.txt
.github/workflows/: pipeline.yml
admin/: django_entrypoint.sh  manage.py  migrate.sh
admin/rmsa/: asgi.py  settings.py  urls.py  wsgi.py
admin/rmsl/: admin.py  apps.py  models.py
admin/rmsl/migrations/: 0001_initial.py  0002_event_unique_event.py  0003_event_scheduled_at.py  0004_event_is_posted.py
config/: airflow.cfg
dags/: resources.py
nginx/: nginx.conf
nginx/conf.d/: admin.conf  airflow.conf
plugins/operators/: telegram.py
