[project]
name = "rms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.5",
    "apache-airflow-providers-postgres>=6.5.1",
    "django>=6.0",
    "feedparser>=6.0.12",
    "openai>=2.14.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
